[package]
name = "rp-pico-mutex"
version = "0.1.0"
edition = "2024"
authors = ["vlk"]
description = "An efficient spinlock-backed mutex implementation for rp2040 and rp235x"
keywords = ["raspberry-pi", "embedded", "synchronization"]

[dependencies]
rp2040-hal = { version = ">=0.11.0,<=999.999.999", default-features = false, optional = true }
rp235x-hal = { version = ">=0.3.0,<=999.999.999", default-features = false, optional = true }


[features]
default = ["rp235x-hal"]
rp235x-hal = ["dep:rp235x-hal"]
rp2040-hal = ["dep:rp2040-hal"]
