[package]
name = "rp-pico-mutex"
version = "0.1.0"
edition = "2024"
authors = ["vlk"]
description = "An efficient spinlock-backed mutex implementation for rp2040 and rp235x"
keywords = ["raspberry-pi", "embedded", "synchronization"]

[dependencies]
portable-atomic = { version = "*", optional = true }
rp2040-hal = { version = "*", default-features = false, optional = true }
rp235x-hal = { version = "*", default-features = false, optional = true }


[features]
default = ["safe-core-guard-access", "rp235x-hal"]
core-guards = ["dep:portable-atomic"]
# Adds a `take()` method to core-guards so they can be acquired with safe code.
safe-core-guard-access = ["core-guards"]
rp235x-hal = ["dep:rp235x-hal"]
rp2040-hal = ["dep:rp2040-hal"]
