[package]
name = "rp-pico-sync"
version = "0.1.0"
edition = "2024"
authors = ["vlk"]
description = "An efficient spinlock-backed mutex implementation for rp2040 and rp235x, as well as some synchronization helper types"
keywords = ["raspberry-pi", "embedded", "synchronization"]

[dependencies]
portable-atomic = { version = "*", optional = true }
rp2040-hal = { version = "*", default-features = false, optional = true }
rp235x-hal = { version = "*", default-features = false, optional = true }


[features]
default = ["single-core-guard-access", "isr-guards"]
# Guard helper types for enforcing ownership of static mutable data
core-guards = []
# Guard helper types for enforcing ownership of static mutable data
isr-guards = []
# Changes several functions in the LocalOnceCell struct to safe functions,
# because only one instance of the guard can be created
single-core-guard-access = ["core-guards", "dep:portable-atomic"]
rp235x-hal = ["dep:rp235x-hal"]
rp2040-hal = ["dep:rp2040-hal"]
